--- a/test.html
+++ b/test.html
@@ -14,15 +14,21 @@
 </head>
 <body class="font-[Poppins]">
 
-    <div class="grid h-screen grid-cols-[200px_1fr] grid-rows-[80px_1fr_50px] gap-2 
-                [grid-template-areas:'header_header'_'sidebar_main'_'footer_footer']
-                md:grid-cols-1 md:[grid-template-areas:'header'_'main'_'sidebar'_'footer']">
-        
-        <header class="bg-blue-500 p-4 text-white [grid-area:header]">Header</header>
-        <aside class="bg-gray-800 text-white p-4 [grid-area:sidebar] md:hidden">Sidebar</aside>
-        <main class="bg-green-300 p-4 [grid-area:main]">Main Content</main>
-        <footer class="bg-gray-600 p-4 text-white [grid-area:footer]">Footer</footer>
-    </div>
+    <div class="bg-[#F4F7FF] w-[300px] h-auto p-5 rounded-2xl poppins-thin">
+        <span class="bg-white rounded-xl text-[12px] font-normal px-4 py-2 mt-3">ShopEase</span>
+        <h1 class="font-bold text-[18px] mt-3 text-[#00303C]">Fix Mobile Button Issue </h1>
+
+        <p class="bg-white  font-normal text-[12px] w-[250px] mt-3 rounded-lg p-4">Debug using Chrome DevTools, check for overlapping.....</p>
+       <hr class="border-dashed">
+       <div class="flex gap-6 mt-3">
+           <div>
+               <p class="font-normal text-[14px]">Deadline</p>
+           <h1 class="font-medium text-[16px] ">21 March 2025</h1>
+           </div>
+           
+           <button class="btn btn-sm bg-[#3752FD] text-white">Completed</button>
+       </div>
+   </div>
 
 </body>
 </html>
