--- a/index.html
+++ b/index.html
@@ -22,29 +22,30 @@
     </style>
 </head>
 
-<body class="bg-[#F4F7FF] mt-6 poppins-thin ">
+<body class="bg-[#F4F7FF] poppins-thin ">
 
-    <header class="md:px-[69px] px-5 md:mt-8 ">
+    <header class="md:px-[69px] px-5 pt-8">
         <!-- nav-bar -->
         <nav class="flex justify-between bg-[#FFFFFF] rounded-[16px] px-6 shadow-md">
             <div class="flex items-center">
                 <img class="md:w-10 w-6 md:h-10 h-6" src="assets/logo.png" alt="">
                 <h1 class="md:text-[35px] text-[20px]">Dev<span class="font-extrabold">Board</span></h1>
             </div>
+
             <div class="flex gap-5 p-3">
                 <div class="flex rounded-[30px] bg-[#F4F7FF] items-center gap-4 p-2">
                     <img src="assets/checkbox.png" alt="" class="w-5 h-5  ">
                     <span class="font-bold md:text-[20px] text-[20px]">23</span>
                 </div>
 
-                <button><img src="assets/theme-btn.png" alt="" class="sm:w-8 sm:h-8"></button>
+                <button id="thimechange"><img src="assets/theme-btn.png" alt="" class="sm:w-8 sm:h-8"></button>
 
             </div>
         </nav>
     </header>
     <!-- Discover Something New Today! -->
-    <section class="flex mx-[64px] mt-7">
-        <section class=" bg-white rounded-2xl mr-4 ">
+    <section class="flex mx-[64px] mt-7 pb-5">
+        <section class=" bg-white rounded-2xl mr-4 pb-4">
 
             <div class="flex justify-evenly pt-4">
                 <!-- discover-box-1 -->
@@ -61,8 +62,7 @@
 
                 <!-- discover-box-2 -->
 
-                <div
-                    class="flex items-center p-[20px] gap-4  rounded-2xl  bg-gradient-to-r from-[#3752FD] to-[#9BA8F8] ...">
+                <div id="next-page" class="flex items-center p-[20px] gap-4  rounded-2xl  bg-gradient-to-r from-[#3752FD] to-[#9BA8F8] ...">
                     <div>
                         <img src="assets/board.png" alt="" class="w-[53px] h-[55px]">
                     </div>
@@ -71,6 +71,7 @@
 
                     </div>
                 </div>
+
 
                 <!-- discover-box-3 -->
 
@@ -214,9 +215,9 @@
             <div class="text-center">
                 <button class="btn btn-sm bg-[#3752FD] text-white mt-3 hover:bg-[#3752FD]">Clear History</button>
             </div>
-
+            <hr class="border-dashed mt-3">
             <div>
-                <h1 class="bg-[#F4F7FF] mt-8 rounded-xl inline-block font-normal text-[12px] p-[10px] ">You have
+                <h1 class="bg-[#F4F7FF] mt-6 rounded-xl inline-block font-normal text-[12px] p-[10px] ">You have
                     Complete The Task <br> Add Dark Mode at 12:48:15 PM</h1>
                 <br>
                 <h1 class="bg-[#F4F7FF] mt-7 rounded-xl inline-block font-normal text-[12px] p-[10px]">You have Complete
@@ -224,6 +225,7 @@
             </div>
         </main>
     </section>
+    <script src="A5.js"></script>
 </body>
 
 </html>
