--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                     <span class="font-bold md:text-[20px] text-[20px]">23</span>
                 </div>
 
-                <button id="thimechange"><img src="assets/theme-btn.png" alt="" class="sm:w-8 sm:h-8"></button>
+                <!-- <img id="thimechange" src="assets/theme-btn.png" alt="" class="sm:w-8 sm:h-8"> -->
+                <div id="ahh">
+                    <img id="non" src="./assets/theme-btn.png" alt="">
+                </div>
 
             </div>
         </nav>
@@ -225,6 +228,7 @@
             </div>
         </main>
     </section>
+
     <script src="A5.js"></script>
 </body>
 
