--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <header class="md:px-[69px] px-5 pt-8">
         <!-- nav-bar -->
-        <nav class="flex justify-between bg-[#FFFFFF] rounded-[16px] px-6 shadow-md">
+        <nav class="flex justify-between bg-[#FFFFFF] rounded-[16px] px-8 shadow-md">
             <div class="flex items-center">
                 <img class="md:w-10 w-6 md:h-10 h-6" src="assets/logo.png" alt="">
                 <h1 class="md:text-[35px] text-[20px]">Dev<span class="font-extrabold">Board</span></h1>
@@ -35,10 +35,10 @@
             <div class="flex gap-5 p-3">
                 <div class="flex rounded-[30px] bg-[#F4F7FF] items-center gap-4 p-2">
                     <img src="assets/checkbox.png" alt="" class="w-5 h-5  ">
-                    <span class="font-bold md:text-[20px] text-[20px]">23</span>
+                    <span id="task2" class="font-bold md:text-[20px] text-[20px]">23</span>
                 </div>
 
-                <!-- <img id="thimechange" src="assets/theme-btn.png" alt="" class="sm:w-8 sm:h-8"> -->
+                
                 <div id="ahh">
                     <img id="non" src="./assets/theme-btn.png" alt="">
                 </div>
@@ -47,25 +47,25 @@
         </nav>
     </header>
     <!-- Discover Something New Today! -->
-    <section class="flex mx-[64px] mt-7 pb-5">
+    <section class="flex mx-[64px] mt-4 pb-5">
         <section class=" bg-white rounded-2xl mr-4 pb-4">
 
             <div class="flex justify-evenly pt-4">
                 <!-- discover-box-1 -->
 
-                <div class="flex items-center p-[20px] gap-4 bg-[#F4F7FF]  rounded-2xl mr-7">
+                <div class="flex items-center p-[20px] gap-4 bg-[#F4F7FF]  rounded-2xl mr-3">
                     <div>
-                        <button><img src="assets/checkbox.png" alt="" class="w-5 h-5"></button>
+                        <a><img src="assets/checkbox.png" alt="" class="w-5 h-5"></a>
                     </div>
                     <div class="items-center">
                         <p class="font-normal text-[16px]">Task Assigned </p>
-                        <h1 class="font-bold text-[25px]">05</h1>
+                        <h1 id="task1" class="font-bold text-[25px]">06</h1>
                     </div>
                 </div>
 
-                <!-- discover-box-2 -->
+                <!-- discover-box-2 --> 
 
-                <div id="next-page" class="flex items-center p-[20px] gap-4  rounded-2xl  bg-gradient-to-r from-[#3752FD] to-[#9BA8F8] ...">
+                <div id="next-page" class="flex items-center p-[20px]  rounded-2xl  bg-gradient-to-r from-[#3752FD] to-[#9BA8F8] ...">
                     <div>
                         <img src="assets/board.png" alt="" class="w-[53px] h-[55px]">
                     </div>
@@ -78,15 +78,13 @@
 
                 <!-- discover-box-3 -->
 
-                <div class="flex items-center p-[20px] gap-4 bg-[#F4F7FF]   rounded-2xl ml-7">
+                <div class="flex items-center p-[20px] gap-4 bg-[#F4F7FF]   rounded-2xl ml-3 ">
                     <div>
                         <a href="" class="bg-white rounded-[50px]"><img src="assets/calender.png" alt=""
                                 class="w-5 h-5"> </a>
                     </div>
                     <div class="items-center">
-                        <p class="font-normal text-[16px]">Wed ,
-                        </p>
-                        <h1 class="font-bold text-[25px]"> Jul 28 2025 </h1>
+                       <p id="time"></p>
                     </div>
                 </div>
 
@@ -111,7 +109,7 @@
                             <h1 class="font-medium text-[16px] ">21 March 2025</h1>
                         </div>
 
-                        <button class="btn btn-sm bg-[#3752FD] text-white hover:bg-[#3752FD]">Completed</button>
+                        <button id="btn1" class="btn btn-sm bg-[#3752FD] text-white hover:bg-[#3752FD]">Completed</button>
                     </div>
                 </div>
                 <!-- Task 2 -->
@@ -129,7 +127,7 @@
                             <h1 class="font-medium text-[16px] ">21 March 2025</h1>
                         </div>
 
-                        <button class="btn btn-sm bg-[#3752FD] text-white hover:bg-[#3752FD]">Completed</button>
+                        <button id="btn2" class="btn btn-sm bg-[#3752FD] text-white hover:bg-[#3752FD]">Completed</button>
                     </div>
                 </div>
                 <!-- Task 3 -->
@@ -147,7 +145,7 @@
                             <h1 class="font-medium text-[16px] ">21 March 2025</h1>
                         </div>
 
-                        <button class="btn btn-sm bg-[#3752FD] text-white hover:bg-[#3752FD]">Completed</button>
+                        <button id="btn3" class="btn btn-sm bg-[#3752FD] text-white hover:bg-[#3752FD]">Completed</button>
                     </div>
                 </div>
                 <!-- Task 4 -->
@@ -165,7 +163,7 @@
                             <h1 class="font-medium text-[16px] ">21 March 2025</h1>
                         </div>
 
-                        <button class="btn btn-sm bg-[#3752FD] text-white hover:bg-[#3752FD]">Completed</button>
+                        <button id="btn4" class="btn btn-sm bg-[#3752FD] text-white hover:bg-[#3752FD]">Completed</button>
                     </div>
                 </div>
                 <!-- Task 5 -->
@@ -183,7 +181,7 @@
                             <h1 class="font-medium text-[16px] ">21 March 2025</h1>
                         </div>
 
-                        <button class="btn btn-sm bg-[#3752FD] text-white hover:bg-[#3752FD]">Completed</button>
+                        <button id="btn5" class="btn btn-sm bg-[#3752FD] text-white hover:bg-[#3752FD]">Completed</button>
                     </div>
                 </div>
                 <!-- Task 6 -->
@@ -201,7 +199,7 @@
                             <h1 class="font-medium text-[16px] ">21 March 2025</h1>
                         </div>
 
-                        <button class="btn btn-sm bg-[#3752FD] text-white hover:bg-[#3752FD]">Completed</button>
+                        <button id="btn6" class="btn btn-sm bg-[#3752FD] text-white hover:bg-[#3752FD]">Completed</button>
                     </div>
                 </div>
             </main>
@@ -216,7 +214,7 @@
                 <h1>Activity Log</h1>
             </div>
             <div class="text-center">
-                <button class="btn btn-sm bg-[#3752FD] text-white mt-3 hover:bg-[#3752FD]">Clear History</button>
+                <a id="clear" class="btn btn-sm bg-[#3752FD] text-white mt-3 hover:bg-[#3752FD]">Clear History</a>
             </div>
             <hr class="border-dashed mt-3">
             <div>
@@ -226,9 +224,26 @@
                 <h1 class="bg-[#F4F7FF] mt-7 rounded-xl inline-block font-normal text-[12px] p-[10px]">You have Complete
                     The Task <br> Add Dark Mode at 12:48:15 PM</h1>
             </div>
+
+            <!-- history section -->
+            <div id="message" class="mt-6 w-11/12 mx-auto">
+
+            </div>
+
         </main>
     </section>
 
+    <script>
+        function updateTime() {
+    const currentDate = new Date();
+    const options = { weekday: 'short', month: 'short', day: 'numeric', year: 'numeric', hour: '2-digit', minute: '2-digit' };
+    const formattedDate = currentDate.toLocaleDateString('en-US', options);
+    document.getElementById('time').innerHTML = formattedDate;
+}
+
+    setInterval(updateTime, 1000);
+    updateTime();
+    </script>
     <script src="A5.js"></script>
 </body>
 
