--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <!-- Task List -->
 
-            <main class="bg-white grid grid-cols-3 gap-4 mt-7 px-4 ">
+            <main class="bg-white grid grid-cols-3 gap-4 mt-5 px-4 ">
 
                 <!-- Task 1 -->
 
@@ -111,7 +111,7 @@
 
                         <button id="btn1" class="btn btn-sm bg-[#3752FD] text-white hover:bg-[#3752FD]">Completed</button>
                     </div>
-                </div>
+                </div> 
                 <!-- Task 2 -->
 
                 <div class="bg-[#F4F7FF] w-[300px] h-auto p-5 rounded-2xl poppins-thin">
@@ -208,24 +208,37 @@
 
         <!-- side-bar -->
 
-        <main class="bg-[#FFFFFF]  rounded-2xl p-5">
+        <main class="bg-[#FFFFFF]  rounded-2xl p-5 w-[240px] ">
             <div class="flex justify-center">
                 <img src="assets/activity.png" alt="">
                 <h1>Activity Log</h1>
             </div>
-            <div class="text-center">
+            <div class="text-center ">
                 <a id="clear" class="btn btn-sm bg-[#3752FD] text-white mt-3 hover:bg-[#3752FD]">Clear History</a>
             </div>
             <hr class="border-dashed mt-3">
-            <div>
-                <h1 class="bg-[#F4F7FF] mt-6 rounded-xl inline-block font-normal text-[12px] p-[10px] ">You have
+            <div id="hidden" class="">
+                <h1 id="comment1" class="hidden bg-[#F4F7FF] mt-4 rounded-xl inline-block font-normal text-[12px] p-[10px] ">You have
                     Complete The Task <br> Add Dark Mode at 12:48:15 PM</h1>
-                <br>
-                <h1 class="bg-[#F4F7FF] mt-7 rounded-xl inline-block font-normal text-[12px] p-[10px]">You have Complete
+            
+                <h1 id="comment2" class="hidden bg-[#F4F7FF] mt-4 rounded-xl inline-block font-normal text-[12px] p-[10px]">You have Complete
+                    The Task <br> Add Dark Mode at 12:48:15 PM</h1>
+
+                <h1 id="comment3" class="hidden bg-[#F4F7FF] mt-4 rounded-xl inline-block font-normal text-[12px] p-[10px]">You have Complete
+                    The Task <br> Add Dark Mode at 12:48:15 PM</h1>
+
+                <h1 id="comment4" class="hidden bg-[#F4F7FF] mt-4 rounded-xl inline-block font-normal text-[12px] p-[10px]">You have Complete
+                    The Task <br> Add Dark Mode at 12:48:15 PM</h1>
+
+                <h1 id="comment5" class="hidden bg-[#F4F7FF] mt-4 rounded-xl inline-block font-normal text-[12px] p-[10px]">You have Complete
+                    The Task <br> Add Dark Mode at 12:48:15 PM</h1>
+
+                <h1 id="comment6" class="hidden bg-[#F4F7FF] mt-4 rounded-xl inline-block font-normal text-[12px] p-[10px]">You have Complete
                     The Task <br> Add Dark Mode at 12:48:15 PM</h1>
             </div>
 
-            <!-- history section -->
+                                     <!-- history section -->
+
             <div id="message" class="mt-6 w-11/12 mx-auto">
 
             </div>
